--- a/eecv_2024.yml
+++ b/eecv_2024.yml
@@ -1,4 +1,4 @@
-name: neurips_2022
+name: eecv_2024
 channels:
   - pytorch
   - conda-forge
@@ -93,4 +93,4 @@ dependencies:
     - wandb==0.12.9
     - yaspin==2.1.0
     - zipp==3.7.0
-prefix: /nethome/aagrawal321/ENTER/envs/icml_2022
+prefix: /nethome/aagrawal321/ENTER/envs/eecv_2024
